--- a/gitlab/deployment.yml
+++ b/gitlab/deployment.yml
@@ -28,6 +28,8 @@ spec:
           ports:
             - name: http-web
               containerPort: 80
+            - name: http-pages
+              containerPort: 8090
             - name: tcp-ssh
               containerPort: 32222
             - name: http-reg
