--- a/gitlab/omnibus-conf.yml
+++ b/gitlab/omnibus-conf.yml
@@ -7,7 +7,7 @@ metadata:
     app: gitlab
 data:
   gitlab_omnibus_config: |
-    # Components
+    ## Components
     gitlab_rails['ldap_enabled'] = false
     prometheus['monitor_kubernetes'] = false
     prometheus_monitoring['enable'] = false
@@ -17,7 +17,7 @@ data:
     postgresql['enable'] = false
     redis['enable'] = false
     
-    # Base
+    ## Base
     gitlab_rails['time_zone'] = 'Europe/Moscow'
     external_url "https://gitlab.dev-srv.home.lan"
     nginx['enable'] = true
@@ -29,23 +29,25 @@ data:
       'X-Forwarded-Ssl' => 'on'
     }
     
-    # Backup
+    ## Backup
     gitlab_rails['backup_path'] = '/mnt/backups'
     gitlab_rails['backup_keep_time'] = 604800
     
-    # DataDirs
+    ## DataDirs
     git_data_dirs({"default" => { "path" => "/gitlab-data/git-data"} })
     gitlab_rails['uploads_directory'] = '/gitlab-data/uploads'
     gitlab_rails['shared_path'] = '/gitlab-data/shared'
     gitlab_ci['builds_directory'] = '/gitlab-data/builds'
+    gitlab_rails['registry_path'] = '/gitlab-data/registry'
+    gitlab_rails['pages_path'] = "/gitlab-data/pages"
     
-    # Runner
+    ## Runner
     gitlab_rails['initial_shared_runners_registration_token'] = "YrPPR6TUUv3AzRjAKLiB"
     
-    # SSH
+    ## SSH
     gitlab_rails['gitlab_shell_ssh_port'] = 32222
     
-    # DB
+    ## DB
     gitlab_rails['db_username'] = "gitlab"
     gitlab_rails['db_password'] = "gitlab"
     gitlab_rails['db_host'] = "postgresql-svc"
@@ -54,14 +56,42 @@ data:
     gitlab_rails['db_adapter'] = 'postgresql'
     gitlab_rails['db_encoding'] = 'utf8'
     
-    # ROOT password
+    ## ROOT password
     gitlab_rails['initial_root_password'] = "secret_pass"
     
-    # Redis
+    ## Redis
     gitlab_rails['redis_host'] = 'redis-svc'
     gitlab_rails['redis_port'] = '6379'
-    
-    # Registry
+    # gitlab_rails['redis_database'] = 0
+
+    ## Pages
+    pages_external_url "http://pages.dev-srv.home.lan/"
+    gitlab_pages['enable'] = true
+    # Set listen-proxy when behind reverse proxy. see https://docs.gitlab.com/ee/administration/pages/#configure-listener-for-reverse-proxy-requests
+    gitlab_pages['listen_proxy'] = "0.0.0.0:8090"
+    # pages_nginx['listen_port'] = 8090
+    pages_nginx['listen_https'] = false
+    # Conflict with chroot, see docs in Gitlab
+    # gitlab_pages['access_control'] = true
+    # Required due to https://gitlab.com/gitlab-org/gitlab-pages/issues/129
+    # gitlab_pages['inplace_chroot'] = true
+
+    ## Sidekiq, required for emails and other stuff to work
+    sidekiq['enable'] = true
+    # sidekiq['concurrency'] = 25 # Single-process sidekiq only
+    sidekiq['interval'] = nil
+    sidekiq['log_directory'] = "/var/log/gitlab/sidekiq"
+    sidekiq['log_format'] = "json"
+    sidekiq['max_concurrency'] = 25
+    sidekiq['min_concurrency'] = 15
+    sidekiq['shutdown_timeout'] = 4
+    sidekiq['queue_groups'] = ["*"]
+    sidekiq['negate'] = false
+    # sidekiq['metrics_enabled'] = true
+    sidekiq['listen_address'] = "localhost"
+    sidekiq['listen_port'] = 8082
+
+    ## Registry
     # For internal registry
     # registry_external_url 'https://reg.dev-srv.home.lan'
     gitlab_rails['registry_enabled'] = true
