--- a/gitlab/svc.yml
+++ b/gitlab/svc.yml
@@ -13,6 +13,10 @@ spec:
       protocol: "TCP"
       port: 80
       targetPort: 80
+    - name: http-pages
+      protocol: "TCP"
+      port: 8090
+      targetPort: 8090
     - name: http-reg
       protocol: "TCP"
       port: 5005
