--- a/gitlab/omnibus-conf.yml
+++ b/gitlab/omnibus-conf.yml
@@ -65,7 +65,7 @@ data:
     # gitlab_rails['redis_database'] = 0
 
     ## Pages
-    pages_external_url "http://pages.gitlab.server.lan/"
+    pages_external_url "https://pages.gitlab.server.lan/"
     gitlab_pages['enable'] = true
     # Set listen-proxy when behind reverse proxy. see https://docs.gitlab.com/ee/administration/pages/#configure-listener-for-reverse-proxy-requests
     gitlab_pages['listen_proxy'] = "0.0.0.0:8090"
