--- a/gitlab/ingress.yml
+++ b/gitlab/ingress.yml
@@ -19,7 +19,7 @@ spec:
       # middlewares:
       #   - name: https-redirectscheme
       #     namespace: gitlab
-    - match: Host(`pages.gitlab.server.lan`) && (PathPrefix(`/`))
+    - match: Host(`pages.server.lan`) && (PathPrefix(`/`))
       kind: Rule
       services:
         - name: gitlab-svc
@@ -38,16 +38,34 @@ spec:
       #     namespace: gitlab
   tls:
     secretName: root-secret
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: gitlab-ssh-ing
+  namespace: gitlab
+spec:
+  entryPoints:
+    - ssh-gitlab
+  routes:
+  - match: HostSNI(`*`)
+    services:
+    - name: gitlab-ssh-svc
+      namespace: gitlab
+      port: 32222
+
 # ---
 # apiVersion: traefik.containo.us/v1alpha1
-# kind: IngressRouteTCP
+# kind: IngressRoute
 # metadata:
-#   name: gitlab-ssh-ing
+#   name: gitlab-http-pages
 # spec:
 #   entryPoints:
-#     - ssh
+#     - http
 #   routes:
-#   - match: HostSNI(`gitlab.dev-srv.home.lan`)
+#   - match: HostRegexp(`{subdomain:[a-z]+}.pages.rudenspavasaris.id.lv`) # or {subdomain:.*}
+#     priority: 1001
+#     kind: Rule
 #     services:
-#     - name: gitlab-ssh-svc
-#       port: 22
+#     - name: gitlab
+#       port: 80
