--- a/registry/deployment.yaml
+++ b/registry/deployment.yaml
@@ -76,29 +76,28 @@ spec:
         ports:
           - containerPort: 5000
             protocol: TCP
-        securityContext:
-          capabilities:
-            add: 
-              - SYS_ADMIN
-        # livenessProbe:
-        #   failureThreshold: 3
-        #   httpGet:
-        #     path: /
-        #     port: 5000
-        #     scheme: HTTP
-        #   periodSeconds: 10
-        #   successThreshold: 1
-        #   timeoutSeconds: 1
-        # readinessProbe:
-        #   failureThreshold: 3
-        #   httpGet:
-        #     path: /
-        #     port: 5000
-        #     scheme: HTTP
-        #   periodSeconds: 10
-        #   successThreshold: 1
-        #   timeoutSeconds: 1
-        resources: {}
+        # securityContext:
+        #   capabilities:
+        #     add: 
+        #       - SYS_ADMIN
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 5000
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 5000
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
