--- a/gitlab/deployment.yml
+++ b/gitlab/deployment.yml
@@ -65,13 +65,13 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 10
-          resources:
-            requests:
-              memory: 1500Mi
-              cpu: 500m
-            limits:
-              memory: 3000Mi
-              cpu: 2000m
+          # resources:
+          #   requests:
+          #     memory: 1500Mi
+          #     cpu: 500m
+          #   limits:
+          #     memory: 3000Mi
+          #     cpu: 2000m
           volumeMounts:
             - name: reg-cert
               mountPath: /reg-auth-cert
